Amplid/src/objects/GetFeedback__c.object
<CustomObject>
    <fields>
        <fullName>AnswerOpenText__c</fullName>
        <label>AnswerOpenText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnswerRatingNuber__c</fullName>
        <label>AnswerRatingNuber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnswerValue__c</fullName>
        <label>AnswerValue</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GetFeedbackResponses</relationshipLabel>
        <relationshipName>GetFeedbackResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GetFeedbackResponses</label>
    <nameField>
        <displayFormat>GF-{000000}</displayFormat>
        <label>GetFeedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GetFeedbackResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>